syntax = "proto3";
package paralus.dev.rpc.role.v3;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "proto/types/rolepb/v3/role.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info : {
    title : "Role management Service"
    version : "2.0"
    contact : {name : "Paralus Dev"}
  }
  schemes : HTTPS
  consumes : "application/json"
  consumes : "application/yaml"
  produces : "application/json"
  produces : "application/yaml"
  security_definitions : {
    security : {
      key : "BasicAuth"
      value : {type : TYPE_BASIC}
    }
    security : {
      key : "ApiKeyAuth"
      value : {type : TYPE_API_KEY in : IN_HEADER name : "X-API-KEYID"}
    }
    security : {
      key : "ApiTokenAuth"
      value : {
        type : TYPE_API_KEY in : IN_HEADER name : "X-API-TOKEN"
      }
    }
  }
  security : {
    security_requirement : {
      key : "BasicAuth"
      value : {}
    }
    security_requirement : {
      key : "ApiKeyAuth"
      value : {}
    }
    security_requirement : {
      key : "ApiTokenAuth"
      value : {}
    }
  }
  responses : {
    key : "403"
    value : {
      description : "Returned when the role does not have permission to access "
                    "the resource."
    }
  }
  responses : {
    key : "404"
    value : {
      description : "Returned when the resource does not exist."
      schema : {json_schema : {type : STRING}}
    }
  }
};

service RoleService {
  rpc CreateRole(paralus.dev.types.role.v3.Role)
      returns (paralus.dev.types.role.v3.Role) {
    option (google.api.http) = {
      post : "/auth/v3/partner/{metadata.partner}/organization/{metadata.organization}/roles"
      body : "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses : {
        key : "201"
        value : {description : "Returned when role is created successfully."}
      }
    };
  };

  rpc GetRoles(paralus.dev.types.role.v3.Role) returns (paralus.dev.types.role.v3.RoleList) {
    option (google.api.http) = {
      get : "/auth/v3/partner/{metadata.partner}/organization/{metadata.organization}/roles"
    };
  };

  rpc GetRole(paralus.dev.types.role.v3.Role) returns (paralus.dev.types.role.v3.Role) {
    option (google.api.http) = {
      get : "/auth/v3/partner/{metadata.partner}/organization/{metadata.organization}/role/{metadata.name}"
    };
  };

  rpc UpdateRole(paralus.dev.types.role.v3.Role) returns (paralus.dev.types.role.v3.Role) {
    option (google.api.http) = {
      put : "/auth/v3/partner/{metadata.partner}/organization/{metadata.organization}/role/{metadata.name}"
      body : "*"
    };
  };

  rpc DeleteRole(paralus.dev.types.role.v3.Role) returns (paralus.dev.types.role.v3.Role) {
    option (google.api.http) = {
      delete : "/auth/v3/partner/{metadata.partner}/organization/{metadata.organization}/role/{metadata.name}"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses : {
        key : "204"
        value : {
          description : "Returned when role is deleted successfully."
        }
      }
    };
  };
}